tests/NormalTests/paczka1/small_fuzzy/34311236.err
Error in line 6: Ui0lVXk A757 61,3
Error in line 5: S472 A757 29,1
Error in line 7: odIcywq S832 90,7
Error in line 4: 0bQJldU S832 15,6
